@@ -39,9 +39,9 @@
             {trans("Category:")}
             <input type="hidden" name="catid" value="all">
             <SELECT size="1" name="catid[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect lms-ui-multiselect-filter" data-default-value="{trans("- all -")}">
-                    <option value="-1" {if is_array($filter.catids) && in_array(-1, $filter.catids)} selected{/if}>{trans('- no categories -')}</option>
+                    <option value="-1" {if in_array(-1, $filter.catids)} selected{/if}>{trans('- no categories -')}</option>
                     {foreach $categories $c}
-                    <OPTION value="{$c.id}"{if is_array($filter.catids) && in_array($c.id, $filter.catids)} SELECTED{/if}>{$c.name}</OPTION>
+                    <OPTION value="{$c.id}"{if in_array($c.id, $filter.catids)} SELECTED{/if}>{$c.name}</OPTION>
                 {/foreach}
             </SELECT>
             </label>
@@ -68,15 +68,15 @@
             {trans("Owner:")}
                 <input type="hidden" name="owner" value="all">
                 <SELECT size="1" name="owner[]" OnChange="document.filter.submit();" multiple class="lms-ui-multiselect" data-default-value="{trans("No filter")}">
-                    <option value="all" data-exclusive{if !is_array($filter.owner) && $filter.owner == "all"} selected{/if}>{trans("No filter")}</option>
-                    <option value="-1" data-exclusive{if !is_array($filter.owner) && $filter.owner == -1} selected{/if}>{trans("no owner")}</option>
-                    <option value="-2" data-exclusive{if !is_array($filter.owner) && $filter.owner == -2} selected{/if}>{trans("with owner")}</option>
-                    <option value="-3" data-exclusive{if !is_array($filter.owner) && $filter.owner == -3} selected{/if}>{trans("no owner or logged user")}</option>
+                    <option value="all" data-exclusive{if empty($filter.owner)} selected{/if}>{trans("No filter")}</option>
+                    <option value="-1" {if in_array('-1', $filter.owner)} selected{/if}>{trans("no owner")}</option>
+                    <option value="-2" data-exclusive{if in_array('-2', $filter.owner)} selected{/if}>{trans("with owner")}</option>
+                    <option value="-3" data-exclusive{if in_array('-3', $filter.owner)} selected{/if}>{trans("no owner or logged user")}</option>
                     {foreach $users as $user}
                         {if !ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users')
                             || (ConfigHelper::checkConfig('phpui.helpdesk_hide_disabled_users') && $user.access)
-                            || (is_array($filter.owner) && in_array($user.id, $filter.owner))}
-                            <OPTION{if !$user.access} disabled{/if} value="{$user.id}"{if is_array($filter.owner) && in_array($user.id, $filter.owner)}} selected{/if}>{$user.rname|truncate:40:"...":true} ({$user.login})</OPTION>
+                            || in_array($user.id, $filter.owner)}
+                            <OPTION{if !$user.access} disabled{/if} value="{$user.id}"{if in_array($user.id, $filter.owner)}} selected{/if}>{$user.rname|truncate:40:"...":true} ({$user.login})</OPTION>
                         {/if}
                     {/foreach}
                 </SELECT>
